@@ -9,14 +9,21 @@
 <?php
 	db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 	check_access( MANAGER );
+
+	if ( empty( $f_version ) ) {
+		print_mantis_error( ERROR_EMPTY_FIELD );
+	}
+
 	$f_version 		= urldecode( $f_version );
 	$f_orig_version = urldecode( $f_orig_version );
 	$f_date_order   = urldecode( $f_date_order );
 
 	$result = 0;
 	$query = '';
-	# check for duplicate
-	if ( !is_duplicate_version( $f_project_id, $f_version, $f_date_order ) ) {
+
+	# check for duplicate (don't care for date_order at this stage, because no two versions should
+	# have the same name even if they have different time stamps.
+	if ( !is_duplicate_version( $f_project_id, $f_version, '0', $f_orig_version ) ) {
 		$result = version_update( $f_project_id, $f_version, $f_date_order, $f_orig_version );
 		if ( !$result ) {
 			break;
@@ -25,10 +32,10 @@
 		$c_version		= addslashes($f_version);
 		$c_orig_version	= addslashes($f_orig_version);
 
-		$query2 = "UPDATE $g_mantis_bug_table
+		$query = "UPDATE $g_mantis_bug_table
 				SET version='$f_version'
 				WHERE version='$f_orig_version'";
-		$result2 = db_query( $query2 );
+		$result = db_query( $query );
 	}
 
 	$t_redirect_url = $g_manage_project_edit_page.'?f_project_id='.$f_project_id;
@@ -46,7 +53,7 @@
 <?php
 	if ( $result ) {				# SUCCESS
 		PRINT "$s_operation_successful<p>";
-	} else if ( is_duplicate_version( $f_project_id, $f_version, $f_date_order )) {
+	} else if ( is_duplicate_version( $f_project_id, $f_version, '0', $f_orig_version )) {
 		PRINT $MANTIS_ERROR[ERROR_DUPLICATE_VERSION].'<p>';
 	} else {						# FAILURE
 		print_sql_error( $query );
