@@ -48,6 +48,7 @@ Mantis
  * Modified & in URLs &amp; to conform with standards.
  * Made 'light grey' the default color for 'closed'.
  * Added bug history functionality.
+ * Fixed defects with updating project categories and versions.
 
 2002.05.19  -  0.17.3
 
